[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.132"
serde_json = "1.0.73"
listenfd = "0.3.5"
clap = { version = "3.0.7", features = ["derive"] }
env_logger = "0.9.0"